FIX color contrast accessibility

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -7,7 +7,7 @@ body {
   font-family: "Poppins", sans-serif;
   font-size: 0.9375rem;
   font-weight: 400;
-  color: hsl(229, 6%, 66%);
+  color: hsl(231, 6%, 47%);
   background-color: hsl(0, 0%, 98%);
 }
 
