--- a/src/css/Card.css
+++ b/src/css/Card.css
@@ -7,7 +7,7 @@
   padding: 2em;
   border-radius: 4px;
   border-top: 4px solid;
-  box-shadow: 0px 10px 20px -10px hsl(229, 6%, 66%);
+  box-shadow: 0px 10px 20px -10px hsl(231, 6%, 47%);
 }
 
 .title {
