--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -4,7 +4,7 @@ $clr-orange: hsl(34, 97%, 64%);
 $clr-blue: hsl(212, 86%, 64%);
 
 $clr-very-dark-blue: hsl(234, 12%, 34%);
-$clr-grayish-blue: hsl(229, 6%, 66%);
+$clr-grayish-blue:  hsl(231, 6%, 47%);
 $clr-very-light-gray: hsl(0, 0%, 98%);
 
 
